--- a/README.html
+++ b/README.html
@@ -450,7 +450,7 @@ duration, etc</td>
 </tr>
 <tr class="odd">
 <td>9.</td>
-<td>scan paths</td>
+<td>scan paths …</td>
 <td></td>
 <td></td>
 </tr>
